--- a/Proyecto/Arbol Infinito JS/index.html
+++ b/Proyecto/Arbol Infinito JS/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Arbol Infinito</title>
 	<link rel="stylesheet" type="text/css" href="estilos/css/estilos.css">
 </head>
@@ -21,5 +22,5 @@
 		</div>
 	</div>
 </body>
-<script src="core/js/index.js" type="text/javascript"></script>
+<script src="core/js/index.js" type="module"></script>
 </html>
