se creo interfaz de terminal y el control de comandos

--- a/Proyecto/Arbol Infinito JS/index.html
+++ b/Proyecto/Arbol Infinito JS/index.html
@@ -9,7 +9,18 @@
 	<div class="contenedor">
 		<div class="fila">
 			<div class="columna-all">
-				
+				<div class="formControl" id="terminal">
+					<label style="color:white;" for="terminal">Terminal de comandos:
+						<input style="width:70%; height:20%;" type="text" name="terminal" id="comando" placeholder="ingrese un comando">
+					</label>
+					<button id="enviarComando" type="">Enviar</button>
+				</div>
+				<div id="start">
+					<button style="width:50%; height:20%; position:absolute; "type="">Iniciar Terminal</button>
+				</div>
+				<div class="formControl">
+					<p style="font-size:20px; color:white;" id="terminalMensaje"></p>
+				</div>
 			</div>
 		</div>
 		<div class="fila">
