Se migraron los comandos mkdir y cd a arbol infinito js

--- a/Proyecto/Arbol Infinito JS/index.html
+++ b/Proyecto/Arbol Infinito JS/index.html
@@ -20,6 +20,7 @@
 				</div>
 				<div class="formControl">
 					<p style="font-size:20px; color:white;" id="terminalMensaje"></p>
+					<p style="font-size:20px; color:white;" id="terminalError"></p>
 				</div>
 			</div>
 		</div>
